--- a/src/viewer/styles.scss
+++ b/src/viewer/styles.scss
@@ -18,8 +18,16 @@
         padding-bottom: 3px;
     }
 
-    .center {
+    td.center {
         text-align: center;
+    }
+
+    td.left {
+        text-align: left;
+    }
+
+    td.right {
+        text-align: right;
     }
 
     .timetable-grid {
@@ -38,6 +46,7 @@
     }
 
     td p {
+        text-align: left;
         margin: 5px 2px;
     }
 
