--- a/src/viewer/styles.scss
+++ b/src/viewer/styles.scss
@@ -30,15 +30,15 @@
         text-align: right;
     }
 
-    .timetable-grid {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        align-items: flex-start;
-        font-size: 14px;
-        row-gap: 20px;
-        column-gap: 10px;
-    }
+    // .timetable-grid {
+    //     display: flex;
+    //     flex-wrap: wrap;
+    //     justify-content: space-around;
+    //     align-items: flex-start;
+    //     font-size: 14px;
+    //     row-gap: 20px;
+    //     column-gap: 10px;
+    // }
 
     .timetable-block {
         flex: 1 1 0;
