Дисциплина -> Предмет teachers day timetable

--- a/src/viewer/styles.scss
+++ b/src/viewer/styles.scss
@@ -22,11 +22,11 @@
         text-align: center;
     }
 
-    td.left {
+    .left {
         text-align: left;
     }
 
-    td.right {
+    .right {
         text-align: right;
     }
 
